@@ -13,9 +13,11 @@
  *
  * See the GNU Lesser General Public License in COPYING.LGPL for more details.
  */
+
 #include <config.h>
 #include <stdio.h>
 #include <starpu.h>
+#include <starpu_scheduler.h>
 
 #define PROGNAME "starpu_machine_display"
 
